Switch logging module to use JUnit Pioneer